--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
     commands:
       - dockerterraform="docker run --rm -w /app  -v $PWD:/app -v $PWD/.aws:/root/.aws -v $PWD/.ssh:/root/.ssh -e PROJ_NAME=$PROJ_NAME $terraformImage"
       - $dockerterraform init 
-      - $dockerterraform workspace new $STAGE || $dockerterraform select new $STAGE
+      - $dockerterraform workspace select $STAGE || $dockerterraform workspace new $STAGE
       - $dockerterraform destroy -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
       - $dockerterraform plan -var ECR_REGISTRY="${REPOSITORY_URI}" -out plan.out
       - $dockerterraform apply -var ECR_REGISTRY="${REPOSITORY_URI}" -auto-approve
